[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "libby"
version = "0.1.0"
description = "Libby: a tiny facade over bamboo with a ZMQ transport"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"                        
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = [
  "pyzmq>=25.0.0",
  "paho-mqtt>=2.1.0"
]

[project.urls]
Homepage = "https://example.com"
Repository = "https://github.com/yourusername/your-repo"
"Bug Tracker" = "https://github.com/yourusername/your-repo/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["libby", "libby.*"]
exclude = ["peers*", "package*"]
